# jmsd_tpa_gtm

./: CMakeLists.txt  README.md
_cmake_settings/: jmsd-tpa-gtm-lib-set-compiler-settings.cmake  jmsd-tpa-gtm-test-lib-set-compiler-settings.cmake  jmsd-tpa-gtm-tests-set-compiler-settings.cmake  tpa-gtm-lib-set-compiler-settings.cmake
_cmake_settings/compiler-settings/: jmsd-tpa-gtm-test-lib-set-windows-compiler-settings.cmake
jmsd_tpa_gtm_lib/: CMakeLists.txt
jmsd_tpa_gtm_test_lib/: CMakeLists.txt
jmsd_tpa_gtm_tests/: CMakeLists.txt
sources/jmsd_tpa_gtm/jmsd/tpa/gtm/: gtm_library.cpp  gtm_library.h  gtm_library_main.cpp  gtm_library_main.h  gtm_library_shared_library_support.h
sources/jmsd_tpa_gtm/jmsd/tpa/gtm/modification/: Configurable_event_listener.cpp  Configurable_event_listener.h  Configurable_event_listener.hxx  Writable_command_line_arguments.cpp  Writable_command_line_arguments.h  Writable_command_line_arguments.hxx
sources/jmsd_tpa_gtm_test/jmsd/tpa/gtm/: gtm_test.cpp  gtm_test_main.cpp  gtm_test_shared_library_support.h
sources/jmsd_tpa_gtm_tests/: gtm_tests_main_entry.cpp
sources/tpa_gtm/jmsd/tpa/gtm/: gtm_library.h  gtm_library_main.cpp  gtm_library_main.h  gtm_library_shared_library_support.h
sources/tpa_gtm/jmsd/tpa/gtm/modification/: Configurable_event_listener.h
tpa_gtm_lib/: CMakeLists.original.txt  CMakeLists.txt
